[gd_scene load_steps=12 format=3 uid="uid://dn2qiejma31v6"]

[ext_resource type="Script" path="res://content/config/actors/HOUND/player.gd" id="1_4fljm"]
[ext_resource type="Script" path="res://content/config/system/player_character/character_stats.gd" id="2_suw8m"]
[ext_resource type="Shader" path="res://content/assets/texture/shaders/Kuwahara.gdshader" id="4_snuhn"]
[ext_resource type="Shader" path="res://content/assets/texture/shaders/ui/crosshair.gdshader" id="4_t1bn0"]
[ext_resource type="Script" path="res://content/config/system/gun_resources/gun_manager.gd" id="4_up2nn"]
[ext_resource type="Script" path="res://content/config/system/gun_resources/gun_system.gd" id="5_mgp6a"]
[ext_resource type="ArrayMesh" uid="uid://cne0ncocqg2k8" path="res://content/assets/weapons/beginner/Knife.res" id="5_wdi1d"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kx1qt"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_yspxw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vu2hw"]
shader = ExtResource("4_t1bn0")
shader_parameter/shift_x = 0.0
shader_parameter/shift_y = 0.0
shader_parameter/shift_rotate = 0.0
shader_parameter/crosshair_color = Color(1, 1, 1, 1)
shader_parameter/spread = 0.07
shader_parameter/shape_sides = 4.0
shader_parameter/radius_rectangle = 0.2
shader_parameter/rectangle_size_x = 1.0
shader_parameter/rectangle_scale = 3.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5cgq1"]
shader = ExtResource("4_snuhn")
shader_parameter/change_color_depth = false
shader_parameter/target_color_depth = 5
shader_parameter/dithering = true
shader_parameter/scale_resolution = false
shader_parameter/target_resolution_scale = 3
shader_parameter/enable_recolor = false

[node name="player" type="CharacterBody3D" node_paths=PackedStringArray("Char_Stats", "CAM_CONTROLLER") groups=["Player"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_4fljm")
Char_Stats = NodePath("Character_Stats")
CAM_CONTROLLER = NodePath("head/camera/camera")
ground_friction = 8
air_cap = 2.0
air_move_speed = 700

[node name="Character_Stats" type="Node" parent="." node_paths=PackedStringArray("Player")]
unique_name_in_owner = true
script = ExtResource("2_suw8m")
Player_Type = 1
Player = NodePath("..")

[node name="staircast" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="lowercast" type="RayCast3D" parent="staircast"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.0089, 0)
target_position = Vector3(0, -1.2, 0)

[node name="uppercast" type="RayCast3D" parent="staircast"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0706953, -0.830603)

[node name="collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_kx1qt")

[node name="mesh" type="MeshInstance3D" parent="collision"]
visible = false
mesh = SubResource("CapsuleMesh_yspxw")
skeleton = NodePath("../..")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="camera" type="Node3D" parent="head"]

[node name="camera" type="Camera3D" parent="head/camera"]

[node name="gun_viewmodel" type="Node3D" parent="head/camera/camera"]

[node name="GunCast" type="RayCast3D" parent="head/camera/camera"]
target_position = Vector3(0, 0, -40)

[node name="Weapon_Manager" type="Node3D" parent="head/camera/camera" node_paths=PackedStringArray("Player_Character", "BulletCast", "GunMesh")]
script = ExtResource("4_up2nn")
Player_Character = NodePath("../../../..")
BulletCast = NodePath("../GunCast")
GunMesh = NodePath("Player_arms/Mesh")

[node name="Player_arms" type="Node3D" parent="head/camera/camera/Weapon_Manager"]

[node name="Mesh" type="MeshInstance3D" parent="head/camera/camera/Weapon_Manager/Player_arms"]
transform = Transform3D(-1.5, 0, -2.26494e-07, 0, 1.5, 0, 2.26494e-07, 0, -1.5, 0.753614, -0.501599, -1)
mesh = ExtResource("5_wdi1d")

[node name="WeaponSystem" type="Node" parent="head/camera/camera/Weapon_Manager" node_paths=PackedStringArray("parent", "CharacterStats")]
unique_name_in_owner = true
script = ExtResource("5_mgp6a")
parent = NodePath("..")
CharacterStats = NodePath("../../../../../Character_Stats")

[node name="CooldownTimer" type="Timer" parent="head/camera/camera/Weapon_Manager/WeaponSystem"]
unique_name_in_owner = true

[node name="Hud" type="CanvasLayer" parent="."]
layer = 2

[node name="crosshair" type="Control" parent="Hud"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Hud/crosshair"]
material = SubResource("ShaderMaterial_vu2hw")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -4.0
offset_right = -4.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.493968, 0.418391, 0.459039, 1)

[node name="hud" type="Control" parent="Hud"]
z_index = 1
material = SubResource("ShaderMaterial_5cgq1")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 10.0
offset_right = -11.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[connection signal="timeout" from="head/camera/camera/Weapon_Manager/WeaponSystem/CooldownTimer" to="head/camera/camera/Weapon_Manager/WeaponSystem" method="_on_cooldown_timer_timeout"]
